Clean deprecated code and correct sonar high priority issues