@@ -1,5 +1,5 @@
 /*
- * Copyright 2020-2024 IEXEC BLOCKCHAIN TECH
+ * Copyright 2020-2025 IEXEC BLOCKCHAIN TECH
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -28,7 +28,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.iexec.common.replicate.ReplicateStatus.CREATED;
 import static com.iexec.common.replicate.ReplicateStatus.WORKER_LOST;
@@ -69,7 +68,7 @@ public class Replicate {
 
         List<ReplicateStatus> statusList = statusUpdateList.stream()
                 .map(ReplicateStatusUpdate::getStatus)
-                .collect(Collectors.toList());
+                .toList();
 
         List<ReplicateStatus> ignoredStatuses = Arrays.asList(
                 ReplicateStatus.WORKER_LOST,
